alpha.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: alpha
spec:
  containers:
    - image: redis
      name: pod
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  tolerations:
    - key: app_type
      value: alpha
      operator: Equal
      effect: NoSchedule
