deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ottofrontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ottofrontend
    spec:
      containers:
      - image: ghcr.io/mayflower/otto-frontend:d1de2a1-dirty
        name: nginx
        resources: {}
        ports: 
        - name: http
          containerPort: 80
          protocol: TCP
status: {}
