nginx2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      resources: {}
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
