ottoservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ottofrontend
  name: ottofrontend
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: ottofrontend
  type: ClusterIP
status:
  loadBalancer: {}
